# Xnor

./: .gitignore  CONVENTIONS.md  Documentation Index.lnk  Doxyfile  README.md  XNOR.sln  XNOR.sln.DotSettings  imgui.ini  nil
Core/: Core.vcxproj  Doxyfile  XNOR.vcxproj.filters  camera_component.h  imgui.ini  src - Raccourci.lnk
Core/include/: application.hpp  core.hpp  core.i  core.swg  screen.hpp  transform.hpp  window.hpp  world.hpp
Core/src/: application.cpp  screen.cpp  transform.cpp  window.cpp  world.cpp
Core/swig/: CMakeLists.txt  core.i  toolbox.i
Core/swig/scene/: component.i  entity.i
Core/swig/utils/: list.i  logger.i
Core/swig/wraps/: core_wrap.cxx
CoreC/: CoreC.vcxproj  CoreC.vcxproj.filters  Core_wrap.cxx
CoreC/interface/: core.i  toolbox.i  transform.i
CoreCSharp/: CoreCSharp.csproj
CoreCSharp/autogenerated/: Animation.cs  Attachment.cs  AttributeDivisor.cs  AudioBuffer.cs  AudioListener.cs  AudioSource.cs  AudioTrack.cs  BlendEquation.cs  BlendFunction.cs  Bone.cs  Bound.cs  BoxCollider.cs  BufferFlag.cs  BufferUsage.cs  Camera.cs  CameraComponent.cs  CameraUniformData.cs  CapsuleCollider.cs  CharacterController.cs  Collider.cs  CollisionData.cs  CollisionEvent.cs  CollisionExitEvent.cs  Component.cs  ComponentList.cs  Construct.cs  CoreC.cs  CoreCNative.cs  Cubemap.cs  CullFace.cs  DataAlignment.cs  DataType.cs  DefferedDescriptor.cs  DepthFunction.cs  DirectionalLight.cs  DirectionalLightData.cs  Directory.cs  DrawMode.cs  Entity.cs  Entry.cs  (+115 more)
CoreCSharp/src/: BlendFunction.cs  BlendValue.cs  Camera.cs  CameraComponent.cs  CameraUniformData.cs  Color.cs  ColorHsva.cs  ColorRgb.cs  ColorRgba.cs  Colorf.cs  Component.cs  Construct.cs  Core.cs  CoreC.cs  CoreCNative.cs  CoreNative.cs  CorePINVOKE.cs  CreateCubeMapInfo.cs  CubeMapFace.cs  Cubemap.cs  DataType.cs  DepthFunction.cs  DirectionalLight.cs  DirectionalLightData.cs  Directory.cs  Entity.cs  Entry.cs  File.cs  FileManager.cs  Font.cs  GamepadButton.cs  GamepadInput.cs  Gbuffer.cs  GpuLightData.cs  Guid.cs  Input.cs  Key.cs  KeyStatus.cs  Light.cs  Logger.cs  (+55 more)
CoreCSharpNative/: CoreCSharpNative.vcxproj  Core_wrap.cxx
CoreCSharpNative/interface/: toolbox.i
CoreCSharpTests/: CoreCSharpTests.csproj
CoreCSharpTests/src/: Color.cs
CoreLibs/: CoreLibs.vcxproj
CoreManaged/src/: Color.cs  CoreNative.cs  Quaternion.cs  Serialized.cs  Vector3.cs
CoreNative/: CoreNative.vcxproj
CoreNative/interface/: core.i
CoreTests/: CoreTests.vcxproj  color.cpp  coroutine.cpp  list.cpp  pch.h  pch.hpp  pointer.cpp  utils.cpp
Editor/: Editor.vcxproj  Editor.vcxproj.filters  imgui.ini
Editor/include/: definitions.hpp  draw_gizmo.hpp  editor.hpp  editor_camera.hpp  (+3 more)
ExampleGame/: Enemy.cs  Lantern.cs  Player.cs  PlayerCamera.cs  PlayerWeapon.cs  RotateDirectionalLight.cs
Game/: Game.csproj  Lantern.cs  Player.cs  PlayerCamera.cs  Program.cs  TestScript.cs  out.txt
MathTests/: MathTests.vcxproj  test.cpp
MathsTests/: MathsTests.vcxproj  test.cpp
Mining/: HelloFromBobbyPtr.PTR  HelloFromBobbyPtr.PTR.results.0  HelloFromBobbyPtr.PTR.results.1  HelloFromBobbyPtr.PTR.results.13  HelloFromBobbyPtr.PTR.results.14  HelloFromBobbyPtr.PTR.results.15  HelloFromBobbyPtr.PTR.results.16  HelloFromBobbyPtr.PTR.results.17  HelloFromBobbyPtr.PTR.results.2  HelloFromBobbyPtr.PTR.results.3  HelloFromBobbyPtr.PTR.results.4  HelloFromBobbyPtr.PTR.results.5  HelloFromBobbyPtr.PTR.results.6  HelloFromBobbyPtr.PTR.results.7  HelloFromBobbyPtr.PTR.results.8  HelloFromBobbyPtr.PTR.results.9
PrecompiledLibraries/: PrecompiledLibraries.vcxproj
XNOR/: XNOR.vcxproj  XNOR.vcxproj.filters  imgui.ini
assets/: fragment.frag  guid_map.txt  vertex.vert
(+626 files in other folders)
